* Fix regression that caused a crash when configuring mods in the wrong order. (Justin Jacobs)
* Fix bug where player title wouldn't update after "unset_status". (Justin Jacobs)
* Fix potential NULL dereference in vendor window. (Justin Jacobs)
* Fix crash when using invalid primary stat in stat_per_primary. (Justin Jacobs)
* Don't spam "Entity stuck" message while pushing an entity out of a bad tile. (Justin Jacobs)
* Keyboard key names such as "Backspace" and "Left Ctrl" can now be translated. (Justin Jacobs)

Translation updates:

* Scottish Gaelic (gd) update (GunChleoc)
* Italian (it) update (MOB2)
* Polish (pl) update (Pawonashi)
* Russian (ru) fix (Igor Paliychuk)
* Ukranian (uk) update (Микола Франчук)



Flare v1.01 (http://flarerpg.org/index.php/2018/03/31/flare-1-01/)

Engine features:

* Add "Renderer" option to the Video section of the Configuration menu. (Justin Jacobs)
* Support loading some hard-coded Configuration menu values from menus/config.txt. (Justin Jacobs)
* Add WidgetSettings class for loading previously hard-coded properties of some Widgets. (Justin Jacobs)
* Add support for changing the buyback price after the player leaves the map. (Justin Jacobs)
* Add ability for certain classes to open a specific tab of the Powers menu automatically. (Justin Jacobs)
* Add 'respec' Event component for resetting XP/stats/powers. (Justin Jacobs)
* Add 'no_aggro' Power attribute. (Justin Jacobs)

Engine fixes:

* Fix bug where if minions were blocking the player, they couldn't be moved out of the way. Minions are now forced to move out of the way if the player is close enough. (Justin Jacobs)
* Fix bug where removing a primary stat bonus would break passive powers that relied upon said bonus. (Justin Jacobs)
* Fix crash on exit when using the sdl_hardware renderer on some systems. (Justin Jacobs)
* Fix disappearing text caused be resizing the window in some cases. (Justin Jacobs)